assignment 3/.metadata/.plugins/org.eclipse.cdt.ui/circular_linked_list.build.log
13:44:00 **** Incremental Build of configuration Debug for project circular_linked_list ****
make all 
Building file: ../circular.c
Invoking: GCC C Compiler
gcc -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"circular.d" -MT"circular.o" -o "circular.o" "../circular.c"
../circular.c: In function ‘deleteparticular’:
../circular.c:229:5: warning: ‘main’ is normally a non-static function [-Wmain]
  229 | int main()
      |     ^~~~
../circular.c: In function ‘main’:
../circular.c:292:2: error: expected declaration or statement at end of input
  292 |  return 0;
      |  ^~~~~~
../circular.c: In function ‘deleteparticular’:
../circular.c:292:2: error: expected declaration or statement at end of input
../circular.c: In function ‘insertlast’:
../circular.c:292:2: error: expected declaration or statement at end of input
At top level:
../circular.c:229:5: warning: ‘main’ defined but not used [-Wunused-function]
  229 | int main()
      |     ^~~~
make: *** [subdir.mk:20: circular.o] Error 1
"make all" terminated with exit code 2. Build might be incomplete.

13:44:00 Build Failed. 4 errors, 2 warnings. (took 219ms)

